--- a/site/Files-Guide/index.html
+++ b/site/Files-Guide/index.html
@@ -343,7 +343,7 @@
 
   <h1>Files Guide</h1>
 
-<p>&laquo; You're lookin' swell, Dolly &raquo;</p>
+<p>&laquo; So, take her wrap, fellas &raquo;</p>
 
   <hr>
 <div class="md-source-file">
