--- a/site/Files-Module-Guide/index.html
+++ b/site/Files-Module-Guide/index.html
@@ -343,7 +343,7 @@
 
   <h1>Files Module Guide</h1>
 
-<p>&laquo; It's so nice to have you back where you belong &raquo;</p>
+<p>&laquo; Dolly'll never go away again &raquo;</p>
 
   <hr>
 <div class="md-source-file">
