--- a/site/Files-Scripts-Guide/index.html
+++ b/site/Files-Scripts-Guide/index.html
@@ -343,7 +343,7 @@
 
   <h1>Files Scripts Guide</h1>
 
-<p>&laquo; I can tell, Dolly &raquo;</p>
+<p>&laquo; Find her an empty lap, fellas &raquo;</p>
 
   <hr>
 <div class="md-source-file">
