--- a/site/Files-Guide/index.html
+++ b/site/Files-Guide/index.html
@@ -1092,7 +1092,7 @@
 
   <h1>Announcement</h1>
 
-<p>&laquo; You're lookin' swell, Dolly &raquo;</p>
+<p>&laquo; One of your old favourite songs from way back when &raquo;</p>
 
   <hr>
 <div class="md-source-file">
