--- a/site/Files-Module-Guide/index.html
+++ b/site/Files-Module-Guide/index.html
@@ -1094,7 +1094,7 @@
 
   <h1>Guide for Module</h1>
 
-<p>&laquo; You're still glowin', you're still crowin' &raquo;</p>
+<p>&laquo; One of your old favourite songs from way back when &raquo;</p>
 
   <hr>
 <div class="md-source-file">
