--- a/site/Files-Scripts-Guide/index.html
+++ b/site/Files-Scripts-Guide/index.html
@@ -1094,7 +1094,7 @@
 
   <h1>Guide for Scripts</h1>
 
-<p>&laquo; While the band's playin' &raquo;</p>
+<p>&laquo; You're still glowin', you're still crowin' &raquo;</p>
 
   <hr>
 <div class="md-source-file">
