--- a/site/Files-Scripts-Guide/index.html
+++ b/site/Files-Scripts-Guide/index.html
@@ -1094,7 +1094,7 @@
 
   <h1>Guide for Scripts</h1>
 
-<p>&laquo; Find her an empty lap, fellas &raquo;</p>
+<p>&laquo; One of your old favourite songs from way back when &raquo;</p>
 
   <hr>
 <div class="md-source-file">
