--- a/site/Files-Module-Guide/index.html
+++ b/site/Files-Module-Guide/index.html
@@ -1094,7 +1094,7 @@
 
   <h1>Guide for Module</h1>
 
-<p>&laquo; You're lookin' swell, Dolly &raquo;</p>
+<p>&laquo; Find her an empty lap, fellas &raquo;</p>
 
   <hr>
 <div class="md-source-file">
