--- a/site/Files-Scripts-Guide/index.html
+++ b/site/Files-Scripts-Guide/index.html
@@ -1162,7 +1162,7 @@
 
   <h1>Guide for Scripts</h1>
 
-<p>&laquo; Well, hello, Dolly &raquo;</p>
+<p>&laquo; While the band's playin' &raquo;</p>
 
   <hr>
 <div class="md-source-file">
