--- a/site/Files-Scripts-Guide/index.html
+++ b/site/Files-Scripts-Guide/index.html
@@ -1162,7 +1162,7 @@
 
   <h1>Guide for Scripts</h1>
 
-<p>&laquo; You're lookin' swell, Dolly &raquo;</p>
+<p>&laquo; Dolly'll never go away again &raquo;</p>
 
   <hr>
 <div class="md-source-file">
