--- a/site/Files-Module-Guide/index.html
+++ b/site/Files-Module-Guide/index.html
@@ -1162,7 +1162,7 @@
 
   <h1>Guide for Module</h1>
 
-<p>&laquo; Hello, Dolly &raquo;</p>
+<p>&laquo; It's so nice to have you back where you belong &raquo;</p>
 
   <hr>
 <div class="md-source-file">
