--- a/site/Files-Scripts-Guide/index.html
+++ b/site/Files-Scripts-Guide/index.html
@@ -1162,7 +1162,7 @@
 
   <h1>Guide for Scripts</h1>
 
-<p>&laquo; You're still goin' strong &raquo;</p>
+<p>&laquo; So, take her wrap, fellas &raquo;</p>
 
   <hr>
 <div class="md-source-file">
