--- a/site/last-created/index.html
+++ b/site/last-created/index.html
@@ -1162,18 +1162,28 @@
 
 <p><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M3.75 1.5a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h9.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073H3.75zM2 1.75C2 .784 2.784 0 3.75 0h6.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16h-9.5A1.75 1.75 0 0 1 2 14.25V1.75zm6.23 3.508a.75.75 0 0 1 .755.745l.01 1.497h1.497a.75.75 0 0 1 0 1.5H9v1.507a.75.75 0 0 1-1.5 0V9.005l-1.502.01a.75.75 0 1 1-.01-1.5l1.507-.01-.01-1.492a.75.75 0 0 1 .745-.755z"/></svg></span> <a href="">最近创建</a></p>
 <blockquote>
+<p>2022-10-03</p>
+</blockquote>
+<details class="missing">
+<summary>Missing</summary>
+<p>1.<a href="/ssJSKFJDJ/Module/listen2me-wiki/">listen2me-wiki</a>
+功能模块listen2me的wiki使用教程.</p>
+</details>
+<blockquote>
 <p>2022-8-28</p>
 </blockquote>
 <details class="warning">
 <summary>Warning</summary>
-<p>1.<a href="/ssJSKFJDJ/Scripts/Genshin_Impact_tts/">Genshin_Impact_tts.lua</a></p>
+<p>1.<a href="/ssJSKFJDJ/Scripts/Genshin_Impact_tts/">Genshin_Impact_tts.lua</a>
+原神tts.</p>
 </details>
 <blockquote>
 <p>2022-8-26</p>
 </blockquote>
 <details class="done">
 <summary>Done</summary>
-<p>1.<a href="/ssJSKFJDJ/Module/Print/">Print.lua</a></p>
+<p>1.<a href="/ssJSKFJDJ/Module/Print/">Print.lua</a>
+自定义print,将print内容作为日志写入文件.</p>
 </details>
 
   <hr>
