--- a/site/Files-Module-Guide/index.html
+++ b/site/Files-Module-Guide/index.html
@@ -1114,7 +1114,7 @@
 
   <h1>Guide for Module</h1>
 
-<p>&laquo; Dolly'll never go away again &raquo;</p>
+<p>&laquo; One of your old favourite songs from way back when &raquo;</p>
 
   <hr>
 <div class="md-source-file">
