--- a/site/Files-Scripts-Guide/index.html
+++ b/site/Files-Scripts-Guide/index.html
@@ -1114,7 +1114,7 @@
 
   <h1>Guide for Scripts</h1>
 
-<p>&laquo; I can tell, Dolly &raquo;</p>
+<p>&laquo; You're still glowin', you're still crowin' &raquo;</p>
 
   <hr>
 <div class="md-source-file">
