--- a/material/overrides/main.html
+++ b/material/overrides/main.html
@@ -16,6 +16,15 @@
 {% endblock %}
 {% block content %}
   {% include "overrides/partials/content.html" %}
+  {{ super() }}
+
+  {% if git_page_authors %}
+    <div class="md-source-date">
+      <small>
+          Authors: {{ git_page_authors | default('enable mkdocs-git-authors-plugin') }}
+      </small>
+    </div>
+  {% endif %}
 {% endblock %}
 {% block scripts %}
   {{ super() }}
