--- a/site/Files-Module-Guide/index.html
+++ b/site/Files-Module-Guide/index.html
@@ -1114,7 +1114,7 @@
 
   <h1>Guide for Module</h1>
 
-<p>&laquo; You're lookin' swell, Dolly &raquo;</p>
+<p>&laquo; It's so nice to have you back where you belong &raquo;</p>
 
   <hr>
 <div class="md-source-file">
@@ -1180,10 +1180,10 @@ https://github.com/mkdocs/mkdocs/blob/master/mkdocs/themes/mkdocs/content.html -
 
 
 
-<p>&laquo; You're lookin' swell, Dolly &raquo;</p>
+<p>&laquo; It's so nice to have you back where you belong &raquo;</p>
 
 
-  <p><small>Authors: <span class='git-page-authors git-authors'><a href='mailto:not.committed.yet'>Not Committed Yet</a>, <a href='mailto:hsiangnianian@outlook.com'>cypress0522</a></span></small></p>
+  <p><small>作者: <span class='git-page-authors git-authors'><a href='mailto:not.committed.yet'>Not Committed Yet</a> (80.0%), <a href='mailto:hsiangnianian@outlook.com'>cypress0522</a> (20.0%)</span></small></p>
 
   
                 
@@ -1195,7 +1195,7 @@ https://github.com/mkdocs/mkdocs/blob/master/mkdocs/themes/mkdocs/content.html -
 
   <h1>Guide for Module</h1>
 
-<p>&laquo; You're lookin' swell, Dolly &raquo;</p>
+<p>&laquo; It's so nice to have you back where you belong &raquo;</p>
 
   <hr>
 <div class="md-source-file">
@@ -1261,7 +1261,7 @@ https://github.com/mkdocs/mkdocs/blob/master/mkdocs/themes/mkdocs/content.html -
   
     <div class="md-source-date">
       <small>
-          Authors: <span class='git-page-authors git-authors'><a href='mailto:not.committed.yet'>Not Committed Yet</a>, <a href='mailto:hsiangnianian@outlook.com'>cypress0522</a></span>
+          作者: <span class='git-page-authors git-authors'><a href='mailto:not.committed.yet'>Not Committed Yet</a> (80.0%), <a href='mailto:hsiangnianian@outlook.com'>cypress0522</a> (20.0%)</span>
       </small>
     </div>
   
