--- a/site/Rss/index.html
+++ b/site/Rss/index.html
@@ -1254,7 +1254,7 @@ https://github.com/mkdocs/mkdocs/blob/master/mkdocs/themes/mkdocs/content.html -
 <p><span class="tooltip hint--top" aria-label="难道不是吗?✨">一切都值得一试。</span></p>
 
 
-  <p><small>Authors: <span class='git-page-authors git-authors'><a href='mailto:2753364619@qq.com'>cypress0522</a></span></small></p>
+  <p><small>作者: <span class='git-page-authors git-authors'><a href='mailto:2753364619@qq.com'>cypress0522</a></span></small></p>
 
   
                 
@@ -1363,7 +1363,7 @@ https://github.com/mkdocs/mkdocs/blob/master/mkdocs/themes/mkdocs/content.html -
   
     <div class="md-source-date">
       <small>
-          Authors: <span class='git-page-authors git-authors'><a href='mailto:2753364619@qq.com'>cypress0522</a></span>
+          作者: <span class='git-page-authors git-authors'><a href='mailto:2753364619@qq.com'>cypress0522</a></span>
       </small>
     </div>
   
