--- a/site/wiki/Midido/index.html
+++ b/site/wiki/Midido/index.html
@@ -1386,7 +1386,7 @@ https://github.com/mkdocs/mkdocs/blob/master/mkdocs/themes/mkdocs/content.html -
 </ul>
 
 
-  <p><small>Authors: <span class='git-page-authors git-authors'><a href='mailto:2753364619@qq.com'>cypress0522</a></span></small></p>
+  <p><small>作者: <span class='git-page-authors git-authors'><a href='mailto:2753364619@qq.com'>cypress0522</a></span></small></p>
 
   
                 
@@ -1504,7 +1504,7 @@ https://github.com/mkdocs/mkdocs/blob/master/mkdocs/themes/mkdocs/content.html -
   
     <div class="md-source-date">
       <small>
-          Authors: <span class='git-page-authors git-authors'><a href='mailto:2753364619@qq.com'>cypress0522</a></span>
+          作者: <span class='git-page-authors git-authors'><a href='mailto:2753364619@qq.com'>cypress0522</a></span>
       </small>
     </div>
   
