--- a/material/overrides/main.html
+++ b/material/overrides/main.html
@@ -2,30 +2,23 @@
   This file was automatically generated - do not edit
 -#}
 {% extends "base.html" %}
+
 {% block extrahead %}
   <link rel="stylesheet" href="{{ 'overrides/assets/stylesheets/main.82a244a8.min.css' | url }}">
 {% endblock %}
+
 {% block announce %}
-  <a href="https://github.com/cypress0522">
-    For updates follow <strong>@cypress0522</strong> on
+  <a href="https://github.com/ssJSKFJDJ">
+    For updates follow <strong>@ssJSKFJDJ</strong> on
     <span class="twemoji github">
       {% include ".icons/fontawesome/brands/github.svg" %}
     </span>
     <strong>Github</strong>
   </a>
 {% endblock %}
-{% block content %}
-  {% include "overrides/partials/content.html" %}
-  {{ super() }}
-  {% if git_page_authors %}
-    <div class="md-source-date">
-      <small>
-          作者: {{ git_page_authors | default('enable mkdocs-git-authors-plugin') }}
-      </small>
-    </div>
-  {% endif %}
-{% endblock %}
+
 {% block scripts %}
   {{ super() }}
   <script src="{{ 'overrides/assets/javascripts/bundle.a163e2c4.min.js' | url }}"></script>
+  <!-- <script src="{{ 'overrides/assets/javascripts/c.js' | url }}"></script> -->
 {% endblock %}
