--- a/material/overrides/main.html
+++ b/material/overrides/main.html
@@ -16,7 +16,9 @@
     <strong>Github</strong>
   </a>
 {% endblock %}
-
+{% block content %}
+  {% include "overrides/partials/content.html" %}
+{% endblock %}
 {% block scripts %}
   {{ super() }}
   <script src="{{ 'overrides/assets/javascripts/bundle.a163e2c4.min.js' | url }}"></script>
